Bug 156168 - SVG: Incorrect style inherit from parent
Summary: SVG: Incorrect style inherit from parent
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:7.6.0.0.beta2 target:24.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-05 12:21 UTC by Xisco Faulí
Modified: 2023-07-05 15:16 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
sample file (1.07 KB, image/svg+xml)
2023-07-05 12:21 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-07-05 12:21:20 UTC
Created attachment 188218 [details]
sample file

Steps to reproduce:
1. Open attached document

-> second, forth, sixth and eighth rectangles should have stroke. The forth doesn't have it
Comment 1 Commit Notification 2023-07-05 15:09:26 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/88e3e855006e18e146a0619311629c44788a2d71

tdf#156168: do nothing when there is no concatenation

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-07-05 15:16:29 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e6ab906ebe9995fb813db7b66df4f9b2def76a1c

tdf#156168: do nothing when there is no concatenation

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.