tdf#156168: do nothing when there is no concatenation

Regression from:
    tdf#156034: check for css style further up in the hierarchy

    Change-Id: I92c6673f1249cc4a273c490cdc0496474ce1f0c5
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153498
    Tested-by: Jenkins
    Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>

Change-Id: Ie699f40ea813d2ba5dc031008d56e2fce73a5715
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154034
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>