svgio/qa/cppunit/SvgImportTest.cxx
@@ -403,6 +403,44 @@ CPPUNIT_TEST_FIXTURE(Test, testTdf145896)
     assertXPath(pDocument, "/primitive2D/transform/polypolygoncolor[3]", "color", "#0000ff");
 }
 
+CPPUNIT_TEST_FIXTURE(Test, testTdf156168)
+{
+    Primitive2DSequence aSequence = parseSvg(u"/svgio/qa/cppunit/data/tdf156168.svg");
+    CPPUNIT_ASSERT_EQUAL(1, static_cast<int>(aSequence.getLength()));
+
+    drawinglayer::Primitive2dXmlDump dumper;
+    xmlDocUniquePtr pDocument = dumper.dumpAndParse(aSequence);
+
+    CPPUNIT_ASSERT (pDocument);
+
+    assertXPath(pDocument, "/primitive2D/transform/polypolygoncolor", 8);
+    assertXPath(pDocument, "/primitive2D/transform/polypolygoncolor[1]", "color", "#0000ff");
+    assertXPath(pDocument, "/primitive2D/transform/polypolygoncolor[2]", "color", "#0000ff");
+    assertXPath(pDocument, "/primitive2D/transform/polypolygoncolor[3]", "color", "#ff0000");
+    assertXPath(pDocument, "/primitive2D/transform/polypolygoncolor[4]", "color", "#ff0000");
+    assertXPath(pDocument, "/primitive2D/transform/polypolygoncolor[5]", "color", "#000000");
+    assertXPath(pDocument, "/primitive2D/transform/polypolygoncolor[6]", "color", "#000000");
+    assertXPath(pDocument, "/primitive2D/transform/polypolygoncolor[7]", "color", "#ff0000");
+    assertXPath(pDocument, "/primitive2D/transform/polypolygoncolor[8]", "color", "#ff0000");
+
+    // Without the fix in place, this test would have failed with
+    // - Expected: 4
+    // - Actual  : 3
+    assertXPath(pDocument, "/primitive2D/transform/polypolygonstroke", 4);
+    assertXPath(pDocument, "/primitive2D/transform/polypolygonstroke[1]/line", "width", "5");
+
+    assertXPath(pDocument, "/primitive2D/transform/polypolygonstroke[1]/line", "color", "#00ff00");
+    assertXPath(pDocument, "/primitive2D/transform/polypolygonstroke[2]/line", "width", "5");
+
+    assertXPath(pDocument, "/primitive2D/transform/polypolygonstroke[2]/line", "color", "#00ff00");
+    assertXPath(pDocument, "/primitive2D/transform/polypolygonstroke[3]/line", "width", "5");
+
+    assertXPath(pDocument, "/primitive2D/transform/polypolygonstroke[3]/line", "color", "#00ff00");
+    assertXPath(pDocument, "/primitive2D/transform/polypolygonstroke[4]/line", "width", "5");
+
+    assertXPath(pDocument, "/primitive2D/transform/polypolygonstroke[4]/line", "color", "#00ff00");
+}
+
 CPPUNIT_TEST_FIXTURE(Test, testTdf156034)
 {
     Primitive2DSequence aSequence = parseSvg(u"/svgio/qa/cppunit/data/tdf156034.svg");
